--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,13 @@ server.port=8080
 #hibernate properties
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-
 
 #Mail Service Set Up
 spring.mail.host = smtp.gmail.com
-spring.mail.username = laonapp@gmail.com
+spring.mail.username = vitusvictor41@gmail.com
+spring.mail.password = xpoyhsgqgcqitsch
 spring.mail.port = 587
 spring.mail.smtp.port=25
 
